# nbody_experiments

./: .gitignore  CMakeLists.txt  README.md  executable.cpp  module.cpp  nbody.h  nbody_pybind.ipynb  nbody_pybind.py  nbodytest.py
